experiment met weerspiegelen vuurwerk

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <section>
       <!-- lucht -->
       <div>
-        <!-- zon -->
-        <div></div>
+        <!-- zon/maan -->
+        <div>
+          <div></div>
+        </div>
         <!-- vuurwerk 1-->
         <div>
           <ul>
@@ -55,7 +57,7 @@
      
 
         <!-- vuurwerk 3 -->
-        <!-- <div>
+        <div>
           <ul>
             <li></li>
             <li></li>
@@ -70,10 +72,66 @@
             <li></li>
             <li></li>
           </ul> 
-        <div>  -->
+        </div>
+
+        <!-- weerspiegeling 1 -->
+        <div>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul> 
+        </div>
+
+        <!-- weerspiegeling 2 -->
+        <div>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul> 
+        </div>
+
+           <!-- weerspiegeling 3 -->
+           <div>
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul> 
+          </div>
       </div>
 
-      <!-- Grond met boompjes en misschien nog gras toevoegen -->
+      
+
+      <!-- Grond/gras/boompjes -->
       <section>
         <svg viewBox="0 0 92.98 140.27">
           <g>
